--- a/package.json
+++ b/package.json
@@ -4,9 +4,20 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agursoyy/vuepress-documentor"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+      "url": "https://github.com/agursoyy/vuepress-documentor/issues"
+  },
+  "homepage": "https://github.com/agursoyy/vuepress-documentor#readme",
   "devDependencies": {
     "vuepress": "^1.8.2"
   }
