--- a/docs/.vuepress/public/admin/config.yml
+++ b/docs/.vuepress/public/admin/config.yml
@@ -25,3 +25,4 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Code", name: "code", widget: "code" }
