--- a/docs/.vuepress/public/admin/config.yml
+++ b/docs/.vuepress/public/admin/config.yml
@@ -17,9 +17,26 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
+        - name: "getting-started"
+    name: "getting-started/notifications"
+    label: "Getting Started-Notifications"
+    folder: "docs/getting-started/notifications"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
+    name: "getting-started/cargo"
+    label: "Getting Started-Cargo"
+    folder: "docs/getting-started/cargo"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
   - name: "public-api-method-details"
     label: "Public API Method Details"
-    folder: "docs/public-api-method-details"
+    folder: "docs/public api method details"
     create: true
     slug: "{{slug}}"
     fields:
